# ffy00.packaging

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  README.md  codecov.yml  noxfile.py  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: conf.py  index.rst  spelling_wordlist.txt.license
ffy00/: packaging.py
tests/: test_check_dependency.py
